<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- generic -->
	    <string name="generic_register">登録</string>
	    <string name="generic_ok">OK</string>
	    <string name="generic_cancel">キャンセル</string>
	    <string name="generic_message_register">登録してよろしいですか？</string>
	    
	    <string name="generic_message_delete_item">Delete the item?</string>
	    
	    <string name="dlg_reconfirm_genre_name">ジャンル名</string>
	    <string name="generic_title_reconfirm">確認</string>
	    <string name="generic_label_create">作成</string>
	    <string name="generic_label_all">すべて</string>
	    <string name="generic_label_choice">Choice</string>
	    <string name="generic_label_update">更新</string>
    	
    <string name="hello">Hello World, ShoppingListActivity!</string>
    <string name="app_name">ShoppingList</string>
    <string name="v1_menu_1">Option 1</string>
    <string name="v1_menu_register_item">品物登録</string>
    
    <!-- registeritem.xml -->
	    <string name="v1_tv_item">品名</string>
	    <string name="v1_tv_store">お店</string>
	    <string name="v1_tv_price">価格</string>
	    <string name="v1_tv_genre">ジャンル</string>
	    <string name="v1_tv_yomi">よみ</string>
	    <string name="v1_btn_register">登録</string>
    
    <string name="v1_menu_item_list">品物リスト</string>
    
    <string name="adapteritem_tv_item_name">品物リスト</string>
    <string name="adapteritem_tv_store">品物リスト</string>
    <string name="adapteritem_tv_price">品物リスト</string>
    <string name="v1_menu_register_shop">店舗登録</string>
    <string name="dlg_register_store_ok">登録</string>
    <string name="dlg_register_store_cancel">キャンセル</string>
    <string name="dlg_register_store_message">店舗の名前をどうぞ</string>
    <string name="dlg_register_store_title">店舗登録</string>
    
    <string name="dlg_input_empty_title">注意！</string>
    <string name="dlg_input_empty_message">入力がありません</string>
    <string name="dlg_input_empty_reenter">もう一度入力</string>
    <string name="dlg_input_empty_cancel">取りやめ</string>
    
    <string name="dlg_reconfirm_store_name_title">確認</string>
    <string name="dlg_reconfirm_store_name_label_store_name">店舗名</string>
    <string name="dlg_reconfirm_store_name_message_store_name"></string>
    <string name="dlg_reconfirm_store_name_message_reconfirm">登録してよろしいですか</string>
    <string name="dlg_reconfirm_store_name_ok">よい</string>
    <string name="dlg_reconfirm_store_name_cancel">キャンセル</string>
    <string name="v1_menu_add_genre">ジャンル登録</string>
    
    <string name="dlg_register_genre_message">ジャンルの名前をどうぞ</string>
    <string name="dlg_register_genre_title">ジャンル登録</string>
    
    <string name="db_manager_btn_create_table">テーブル作成</string>
    <string name="db_manager_btn_drop_table">テーブル削除</string>
    
    <!-- menu_main.xml -->
    	<string name="v1_menu_db_manager">データベース</string>
    	<string name="menu_main_tab_actv">TabActv</string>
    	<string name="menu_main_pref_actv">Preference</string>
    	<string name="menu_main_sort_list">Sort list</string>
    
    <!-- db_manager.xml -->
    <string name="dlg_create_table_title">テーブル作成</string>
    <string name="dlg_create_table_label_column_name">カラム名</string>
    <string name="dlg_create_table_label_data_type">データ・タイプ</string>
    <string name="dlg_create_table_label_table_name">テーブル名</string>
    <string name="dlg_drop_table_title">テーブル削除</string>
    <string name="dlg_confirm_drop_table_tv_message_drop">このテーブルを削除しますか？</string>
    
    <!-- ItemList.java: Option menu -->
    	<string name="menu_listitem_filter">フィルター</string>
    	<string name="menu_listitem_tabToBuy_clear_selections">Clear selections</string>
    	<string name="menu_listitem_tabToBuy_admin_db">Admin db</string>
    	
    	<string name="menu_listitem_tabToBuy_clear_basket">Basket</string>
    	<string name="menu_listitem_tabToBuy_clear_checked_items">Checked items</string>
    
    <!-- dlg_filter_list.xml -->
    <string name="dlg_filter_list_tv_title">フィルター</string>
    <string name="dlg_filter_list_tv_store">店舗</string>
    <string name="dlg_filter_list_tv_genre">ジャンル</string>
    <string name="dlg_filter_list_tv_history">フィルター履歴</string>

    <!-- shoppinglist.xml -->
    	<string name="sl_tv_item_list">品物リスト</string>
    	<string name="sl_tv_item_register">登録</string>
    	<string name="sl_tv_item_db">データベース</string>
    
    <!-- dlg_register_main.xml -->
    	<string name="dlg_register_main_items">品物</string>
    	<string name="dlg_register_main_stores">店舗</string>
    	<string name="dlg_register_main_genres">ジャンル</string>
    	
    	
    <!-- itemlist.xml -->
    	<string name="itemlist_bt_choose">確定</string>
    	<string name="itemlist_bt_see_chosen">見る</string>
    
    <!-- dlg_db_admin.xml -->
	    <string name="dlg_db_admin_title">DB Admin</string>
	    <string name="dlg_db_admin_item_backup_db">Backup DB</string>
	    <string name="dlg_db_admin_item_refresh_db">DBリフレッシュ</string>
	    <string name="dlg_db_admin_item_refatcor_db">Refactor DB</string>
	    <string name="dlg_db_admin_item_restore_db">Restore db</string>
	    <string name="dlg_db_admin_item_get_yomi">Get Yomi data</string>
	    <string name="dlg_db_admin_item_post_data">Post data</string>
    
	<!-- preferences.xml -->
		<string name="prefs_title_bgm">BGM on</string>
		<string name="prefs_key_bgm">pref_bgm</string>
	
	<!-- SharedPreferencesName -->
		<string name="shared_preferences_name">preferences</string>
    
	<!-- List: lvTab2 -->
		<string name="tabactv_tab2_lv_title">Admin list view</string>
		<string name="tabactv_tab2_lv_delete_from_list">Delete from list</string>
		
	<!-- TabActv.java -->
		<string name="tabactv_tabtags_first">First</string>
		<string name="tabactv_tabtags_second">Second</string>
		
	<!-- menu_listitem_tabToBuy_admin_db -->
		<string name="menu_listitem_tabToBuy_admin_db_save_tobuy_list">
		    		Save to-buy list</string>
		<string name="menu_listitem_tabToBuy_admin_db_load_tobuy_list">
		    		Load to-buy list</string>
		<string name="menu_listitem_tabToBuy_admin_db_delete_tobuy_list">
		    		Delete to-buy list</string>
		<string name="menu_listitem_tabToBuy_admin_db_upload_tobuy_list">
		    		Upload to-buylist</string>
		
	<!-- dlg_save_tobuy_list.xml -->
		<string name="dlg_save_tobuy_list_scheduled_date">予定日</string>	
		<string name="dlg_save_tobuy_list_store_name">店名</string>
		<string name="dlg_save_tobuy_list_amount">金額</string>
		<string name="dlg_save_tobuy_list_memo">メモ</string>
		
	<!-- itemlist_tabs.xml -->
		<string name="itemlist_tabs_tobuy_sum">合計</string>
		<string name="itemlist_tabs_tobuy_sum_initial">0 円</string>
		
	<!-- dlg_edit_items.xml -->
		<string name="dlg_edit_items_title">Edit items</string>
		
	<!-- dlg_sort_list.xml -->
		<string name="dlg_sort_list_title">Sort by</string>
		<string name="dlg_sort_list_item_name">Item name</string>
		<string name="dlg_sort_list_genre">Genre</string>
		<string name="dlg_sort_list_store">Store</string>
		
		<string name="dlg_sort_list_genre_item_name">Genre/Item name</string>
		<string name="dlg_sort_list_store_item_name">Store/Item name</string>
		<string name="dlg_sort_list_store_genre_item_name">Store/Genre/Item name</string>
	
	<!-- Dialog: Tab1, item list, long click -->
		<string name="dlg_item_list_long_click_edit">Edit</string>
		<string name="dlg_item_list_long_click_delete">Delete</string>
		
	<!-- Dialog: Upload boutght items -->
		<string name="dlg_post_bought_items_message">Upload bought items?</string>
		
</resources>