<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <TableRow
            android:id="@+id/dlg_save_tobuy_list_scheduled_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/dlg_save_tobuy_list_tv_scheduled_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dlg_save_tobuy_list_scheduled_date"
                android:textSize="20sp" />

            <DatePicker
                android:id="@+id/dlg_save_tobuy_list_dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            
        </TableRow>

        <TableRow
            android:id="@+id/dlg_save_tobuy_list_store_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/dlg_save_tobuy_list_tv_store_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dlg_save_tobuy_list_store_name"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/dlg_save_tobuy_list_sp_store_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/dlg_save_tobuy_list_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/dlg_save_tobuy_list_tv_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dlg_save_tobuy_list_amount"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/dlg_save_tobuy_list_et_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" >

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/dlg_save_tobuy_list_memo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/dlg_save_tobuy_list_tv_memo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dlg_save_tobuy_list_memo"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/dlg_save_tobuy_list_et_memo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/dlg_save_tobuy_list_bt_ok"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:padding="3dp"
            android:text="@string/generic_ok"
            android:textSize="23sp" />

        <Button
            android:id="@+id/dlg_save_tobuy_list_bt_cancel"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:padding="3dp"
            android:text="@string/generic_cancel"
            android:textColor="@color/red"
            android:textSize="23sp" />

    </LinearLayout>

</LinearLayout>