<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/dlg_confirm_delete_ps_item_tv_label_store_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/black"
                android:text="@string/dlg_reconfirm_store_name_label_store_name"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dlg_confirm_delete_ps_item_tv_val_store_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:padding="3dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/dlg_confirm_delete_ps_item_tv_label_due_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/black"
                android:text="@string/dlg_save_tobuy_list_scheduled_date"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dlg_confirm_delete_ps_item_tv_val_due_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:padding="3dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/dlg_confirm_delete_ps_item_lv"
            android:layout_width="match_parent"
            android:layout_height="200dp" >
        </ListView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/dlg_confirm_delete_ps_item_bt_ok"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:padding="3dp"
            android:text="@string/generic_ok"
            android:textSize="23sp" />

        <Button
            android:id="@+id/dlg_confirm_delete_ps_item_bt_cancel"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:padding="3dp"
            android:text="@string/generic_cancel"
            android:textColor="@color/red"
            android:textSize="23sp" />

    </LinearLayout>

</LinearLayout>